<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- app -->
    <string name="app_name">Critical Maps</string>

    <!-- nav -->
    <string name="section_map">map</string>
    <string name="section_rules">rules</string>
    <string name="section_twitter">twitter</string>
    <string name="section_about">about</string>
    <string name="section_chat">chat</string>

    <!-- close -->
    <string name="close">really close the app?</string>
    <string name="yes">yes</string>
    <string name="no">nope</string>

    <!-- acivity bar -->
    <string name="tracking">tracking</string>
    <string name="show_sternfahrt_routes">show sternfahrt routes</string>
    <string name="close_button">close</string>
    <string name="feedback">feedback</string>
    <string name="datenschutz">privacy policy</string>
    <string name="take_picture">take picture</string>

    <!-- map -->
    <string name="notification_tracking_title">location is being tracked</string>
    <string name="notification_tracking_text">to deactivate: open the app and switch tracking off via the settings
        button
        or close it via the x-button.
    </string>
    <string name="map_overlay_tracking_off">tracking ist turned off. \n
        activate tracking to be able to see all other cyclists. \n\n
        just tap here!
    </string>

    <!-- rules -->
    <string name="rules_corken">corking!?</string>
    <string name="rules_corken_explain">protect motorists from themselves by corking!</string>

    <string name="rules_oncoming_traffic">oncoming traffic</string>
    <string name="rules_oncoming_traffic_explain">do not drive on the opposite lane.</string>

    <string name="rules_steady">hold your horses!</string>
    <string name="rules_steady_explain">when driving in the front: no speeding! when driving in the rear: close gaps!
    </string>

    <string name="rules_brake">no hard stops!</string>
    <string name="rules_brake_explain">if you really have to though, try to warn people behind you.
    </string>

    <string name="rules_green">when driving at the head: stop at the redlights!</string>
    <string name="rules_green_explain">when you arrive at a red light while driving as part of the head of the mass, be
        sure to stop when the traffic light shows red.
    </string>

    <string name="rules_friendly">hang loose</string>
    <string name="rules_friendly_explain">don\'t allow yourself to be provoked. be friendly to the police, motorists and
        everybody else, even if they are not.
    </string>

    <string name="rules_fun">have fun!</string>
    <string name="rules_fun_explain">enjoy reclaimed streets. go checkout the sound bikes. chat with motorists,
        pedestrian and let them know what\'s going on. have fun!
    </string>

    <!-- chat -->
    <string name="chat_heading">messages will be deleted after 30 minutes.</string>
    <string name="chat_send">send</string>
    <string name="chat_text">you have 255 characters...</string>
    <string name="chat_sending">sending...</string>

    <!-- notifications -->
    <string name="notification_alarm_title">don\'t forget:</string>
    <string name="notification_alarm_text">Critical Mass today 20:00 at Heinrichplatz! Viva la velorution!</string>

    <!-- time to word -->
    <string name="timetoword_justnow">just now...</string>
    <string name="timetoword_aminuteago">a minute ago</string>
    <string name="timetoword_minutesago">%s minutes ago</string>
    <string name="timetoword_anhourago">an hour ago</string>
    <string name="timetoword_hoursago">%s hours ago</string>
    <string name="timetoword_yesterday">yesterday</string>
    <string name="timetoword_daysago">%s days ago</string>

    <!-- camera -->
    <string name="camera_no_camera">no camera present</string>
    <string name="camera_comfirm_image_upload">
        <![CDATA[
        Willst du das Foto auf <a href="http://criticalmaps.net">criticalmaps.net</a> hochladen? \nWir ver&ouml;ffentlichen die Bilder dort auf der Karte unter der <a href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA 4.0</a> Lizenz.
        ]]>
    </string>
    <string name="camera_upload">foto hochladen!</string>
    <string name="camera_discard">och nööö :-(</string>
    <string name="camera_uploading_progress">hochladen...</string>
    <string name="camera_error">something went wrong :-(</string>
    <string name="camera_uploading_done">fertig!</string>


</resources>
