<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFFFFFFF"
              android:layout_weight="1"
              android:orientation="vertical">
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:background="#FFFFFFFF"
                      android:layout_weight="1"
                      android:orientation="vertical">
            <Button android:id="@+id/btnCorken"
                    android:text="@string/rules_corken"
                    style="@style/rules_button"/>
            <LinearLayout android:id="@+id/panelCorken"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                    >
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/rules_corken_explain"
                          android:layout_gravity="left|top"
                          style="@style/rules_explainer"/>
                <ImageView android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:src="@drawable/rules_corken"/>
            </LinearLayout>
            <Button android:id="@+id/btnSettings"
                    android:text="@string/rules_oncoming_traffic"
                    style="@style/rules_button"/>
            <LinearLayout android:id="@+id/panelOncomingTraffic"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/rules_oncoming_traffic_explain"
                          android:layout_gravity="left|top"
                          style="@style/rules_explainer"/>
                <ImageView android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:src="@drawable/rules_wronglane"/>
            </LinearLayout>
            <Button android:id="@+id/btnPrivacy"
                    android:text="@string/rules_steady"
                    style="@style/rules_button"/>
            <LinearLayout android:id="@+id/panelSlow"
                          android:orientation="vertical"
                          android:layout_width="fill_parent"
                          android:layout_height="wrap_content"
                          android:layout_weight="1">
                <TextView android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:text="@string/rules_steady_explain"
                          android:layout_gravity="left|top"
                          style="@style/rules_explainer"/>
                <ImageView android:layout_width="fill_parent"
                           android:layout_height="fill_parent"
                           android:src="@drawable/rules_slowly"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
